Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26478

AnimatedImage does not emit changed signals for paused and playing

    XMLWordPrintable

Details

    • 705181e0f84e7867952fc00f46436a5dbd584b89

    Description

      There is no
      emit pausedChanged()
      emit playingChanged()
      for when these properties are set by something other than the QMovie

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes